fix alignment of quickconvert canvas

--- a/public/styles/landingpage/quickconvert.styl
+++ b/public/styles/landingpage/quickconvert.styl
@@ -7,6 +7,7 @@
 		padding-top 200px
 
 	.canvasWrapper
+		display inline-block
 		width 388px
 		height 300px
 		max-width: 100%
